LIST OF CHANGES FOR NPG-QC PACKAGE

release 67.1.0
  - if DO_NOT_USE reference selected don't run VerifyBamID but provide
      explanatory comment in json output file
  - in qc store, capture error inferring a path to the archive dir,
      which we need to retrieve autoqc data, rather from inferring
      some other path

 release 67.0.0
  - fix regular expression used in collapser after change in template
  - adapter check switched to use cram files; fixed an old bug in
      parsing blat output which resulted in incorrect adapter counters
      per cycle
  - record absolute path of the verifyBamID executable
  - remove provisions for retrieval of autoqc results from old style
      run folders

release 66.6.0
 - review autoqc check: do not exit on criteria evaluation error
 - table and DBIx class for the review autoqc check
 - SeqQC display for review autoqc results
 - qc_store retrieval from a database reimplemented to ensure that
     merged data are not retrieved when run data are required
 - SeqQC templates updated to conform with Template::Toolkit v2.29

release 66.5.1
 - add placeholder results file for bcfstats where no ref genotypes exist
 - ensure immutability of a private attribute in autoqc checks review

release 66.5
 - update spatial_filter results parsing
 - add target autosome stats to bam_flagstats qc check
 - allow 'last_modified' date in mqc tables to be pre-set
 - new autoqc check 'review' to evaluate results of other
   checks against configurable criteria
 - SeqQC: add a visual que for failed autoqc review results

release 66.4
 - allow to finalise undecided library manual qc outcomes for
   all entities
 - remove library type restriction from genotype_call can_run (retained as double check in seq_alignment)

release 66.3
 - sequence_summary table - extend storage for the header column
 - remove fastqcheck database loader
 - autoqc database deletion script update

release 66.2
 - SeqQC: heatmaps from samtools stats files as a source